refactor: remove concept of High Level Model interfaces
