# src/modules/auth/auth.controller.ts
@@ -11,10 +11,18 @@ import { IUserWithTokens } from './auth.interfaces.js';
 
 @Route('v1/auth')
 export class AuthController extends Controller {
-  @SuccessResponse("201", "Created")
+  @SuccessResponse('201', 'Created')
   @Post('register')
   public async register(@Body() requestBody: NewRegisteredUser): Promise<IUserWithTokens> {
     const user = await userService.registerUser(requestBody);
+    const tokens = await tokenService.generateAuthTokens(user);
+    return { user, tokens };
+  }
+
+  @SuccessResponse('200')
+  @Post('login')
+  public async login(@Body() requestBody: { email: string; password: string }): Promise<IUserWithTokens> {
+    const user = await authService.loginUserWithEmailAndPassword(requestBody.email, requestBody.password);
     const tokens = await tokenService.generateAuthTokens(user);
     return { user, tokens };
   }
