# src/specs/swagger.json
@@ -7,8 +7,9 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IUserHLModel": {
+			"IUserBaseModel": {
 				"properties": {
+					"id": {},
 					"name": {
 						"type": "string"
 					},
@@ -23,8 +24,7 @@
 					},
 					"isEmailVerified": {
 						"type": "boolean"
-					},
-					"id": {}
+					}
 				},
 				"required": [
 					"name",
@@ -72,7 +72,7 @@
 			"IUserWithTokens": {
 				"properties": {
 					"user": {
-						"$ref": "#/components/schemas/IUserHLModel"
+						"$ref": "#/components/schemas/IUserBaseModel"
 					},
 					"tokens": {
 						"$ref": "#/components/schemas/AccessAndRefreshTokens"
@@ -85,7 +85,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_IUserBaseModel.Exclude_keyofIUserBaseModel.role-or-isEmailVerified__": {
+			"Pick_IUserBaseModel.Exclude_keyofIUserBaseModel.id-or-role-or-isEmailVerified__": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -105,12 +105,25 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_IUserBaseModel.role-or-isEmailVerified_": {
-				"$ref": "#/components/schemas/Pick_IUserBaseModel.Exclude_keyofIUserBaseModel.role-or-isEmailVerified__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
 			"NewRegisteredUser": {
-				"$ref": "#/components/schemas/Omit_IUserBaseModel.role-or-isEmailVerified_"
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -151,6 +164,47 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/NewRegisteredUser"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/v1/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IUserWithTokens"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"password",
+									"email"
+								],
+								"type": "object"
 							}
 						}
 					}
